# prometheus-midi-controller

./: Cargo.toml  README.md
app/: package-lock.json  package.json
app/src/components/: Element.js
app/src/containers/: Board.js
src/: faders.rs  main.rs  midi.rs  serial.rs  ui.rs
