[package]
name = "serial-to-midi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.7"
dialoguer = {version = "0.10.4", features = ["fuzzy-select"]}
midi-control = "0.2.2"
midir = "0.9.1"
serialport = "4.2.1"
