[package]
name = "serial-to-midi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
egui_extras = { version = "0.23.0", features = ["all_loaders"] }
image = { version = "0.24.7", features = ["jpeg", "png"] }
midi-control = "0.2.2"
midir = "0.9.1"
serialport = "4.2.1"
