[package]
name = "serial-to-midi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.20", features = ["ws", "headers"]}
axum-macros = "0.3.8"
eframe = "0.22.0"
egui_extras = { version = "0.23.0", features = ["all_loaders"] }
futures = "0.3.28"
futures-util = {version = "0.3.28", features = ["sink", "std"]}
image = { version = "0.24.7", features = ["jpeg", "png"] }
local-ip-address = "0.5.6"
midi-control = "0.2.2"
midir = "0.9.1"
serde = "1.0.189"
serde_json = "1.0.107"
serialport = "4.2.1"
tokio = {version = "1.33.0", features = ["full"]}
tower-http = {version = "0.4.4",  features = ["fs", "trace"] }
